fix: info shouldn't be too high up for weird view ports

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -62,6 +62,9 @@
     @media (min-width: 768px) {
       margin-top: 65vh;
     }
+    @media (min-height: 2000px) {
+      margin-top: 80vh;
+    }
     @media (min-width: 2000px) {
       margin-top: 80vh;
     }
